--- a/publications.html
+++ b/publications.html
@@ -47,11 +47,11 @@
 									</li>
 									<li> <strong>Dynamic Term-Modal Logic for Epistemic Social Network Dynamics.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
-										<br /> <i>Logic, Rationality, and Interaction (LORI 2019)</i>. P. Blackburn, E. Lorini, M. Guo, eds.. Lecture Notes in Computer Science. vol. 11813. Springer. 2019.
+										<br /> <i>Logic, Rationality, and Interaction (LORI 2019)</i>. P. Blackburn, E. Lorini, M. Guo, eds. Lecture Notes in Computer Science. vol. 11813. Springer. 2019.
 									</li>
 									<li> <strong>Evidence logics with relational evidence.</strong> 
 										<br/> Alexandru Baltag and Andrés Occhipinti Liberman. 
-										<br /> <i>Logic, Rationality, and Interaction (LORI 2017)</i>. A. Baltag, J. Seligman, T. Yamada, eds.. Lecture Notes in Computer Science. vol. 10455. Springer. 2017.
+										<br /> <i>Logic, Rationality, and Interaction (LORI 2017)</i>. A. Baltag, J. Seligman, T. Yamada, eds. Lecture Notes in Computer Science. vol. 10455. Springer. 2017.
 									</li>
 									<li> <strong>Does telling white lies signal pro-social preferences?</strong> 
 										<br/> Laura Biziou-van-Pol, Jana Haenen, Arianna Novaro, Andrés Occhipinti Liberman and Valerio Capraro.
