--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							    <p>I'm an External Lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a>, <a href="https://www.dtu.dk/">Technical University of Denmark (DTU)</a>. </p>
 
 
-							    <p>I received my PhD degree in artificial intelligence and logic from the same department, in November 2020.</p>
+							    <p>I obtained my PhD degree in computer science (artificial intelligence and logic) from the same department, in November 2020.</p>
 
 
 							    <p>Earlier, I completed the <a href="https://msclogic.illc.uva.nl/">MSc in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a>, <a href="https://www.uva.nl/">University of Amsterdam</a>.</p>
