--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<div class="content">
+					<div class="content", style="position:relative; top:-122px">
 						
 						<div class="row">
 							<div class="col-3 col-12-xsmall">
