--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>publications</title>
@@ -39,23 +34,28 @@
 								<ol>
 									<li> <strong>Decidability Results in First-Order Epistemic Planning.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
-										<br /> <i>Procceedings of IJCAI 2020 (29th International Joint Conference on Artificial Intelligence)</i>. 2020.
+										<br/> <i>Procceedings of IJCAI 2020 (29th International Joint Conference on Artificial Intelligence)</i>. 2020.
+										<br/> <a href="https://www.ijcai.org/Proceedings/2020/0575.pdf">[pdf]</a>
 									</li>
-									<li> <strong>Dynamic Term-Modal Logics for First-Order Epistemic Planning.</strong> 
-										<br/> Andreas Achen, Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
-										<br /> <i>Artificial Intelligence</i>, volume 286. 2020.
+									<li> <strong>Dynamic term-modal logics for first-order epistemic planning.</strong> 
+										<br/> Andrés Occhipinti Liberman, Andreas Achen and Rasmus K. Rendsvig. 
+										<br/> <i>Artificial Intelligence (AIJ)</i>, volume 286. 2020. 
+										<br/> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0004370219300785">[publisher link]</a>
 									</li>
 									<li> <strong>Dynamic Term-Modal Logic for Epistemic Social Network Dynamics.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
-										<br /> <i>Logic, Rationality, and Interaction (LORI 2019)</i>. P. Blackburn, E. Lorini, M. Guo, eds. Lecture Notes in Computer Science. vol. 11813. Springer. 2019.
+										<br /> <i>Logic, Rationality, and Interaction (LORI 2019)</i>. P. Blackburn, E. Lorini, M. Guo, eds.. Lecture Notes in Computer Science. vol. 11813. Springer. 2019. 
+										<br/> <a href="https://arxiv.org/pdf/1908.09658.pdf">[pdf]</a> <a href="https://link.springer.com/chapter/10.1007/978-3-662-60292-8_13">[publisher link]</a>
 									</li>
-									<li> <strong>Evidence logics with relational evidence.</strong> 
+									<li> <strong>Evidence logics with Relational Evidence.</strong> 
 										<br/> Alexandru Baltag and Andrés Occhipinti Liberman. 
-										<br /> <i>Logic, Rationality, and Interaction (LORI 2017)</i>. A. Baltag, J. Seligman, T. Yamada, eds. Lecture Notes in Computer Science. vol. 10455. Springer. 2017.
+										<br /> <i>Logic, Rationality, and Interaction (LORI 2017)</i>. A. Baltag, J. Seligman, T. Yamada, eds.. Lecture Notes in Computer Science. vol. 10455. Springer. 2017. 
+										<br/><a href="https://arxiv.org/pdf/1706.05905.pdf">[pdf]</a> <a href="https://link.springer.com/chapter/10.1007/978-3-662-55665-8_2">[publisher link]</a> 
 									</li>
 									<li> <strong>Does telling white lies signal pro-social preferences?</strong> 
 										<br/> Laura Biziou-van-Pol, Jana Haenen, Arianna Novaro, Andrés Occhipinti Liberman and Valerio Capraro.
-										<br /> <i>Judgment and Decision Making</i>, 10 (6). 2015.
+										<br /> <i>Judgment and Decision Making</i>, 10 (6). 2015. 
+										<br/><a href="http://journal.sjdm.org/15/15612/jdm15612.pdf">[pdf]</a> 
 									</li>
 								</ol>
 
