--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 								<ol>
 									<li> <strong>Decidability Results in First-Order Epistemic Planning.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
-										<br/> <i>Proceedings of the 29th International Joint Conference on Artificial Intelligence< (IJCAI)/i>. 2020.
+										<br/> <i>Proceedings of the 29th International Joint Conference on Artificial Intelligence (IJCAI)</i>. 2020.
 										<br/> <a href="https://www.ijcai.org/Proceedings/2020/0575.pdf">[pdf]</a>
 									</li>
 									<li> <strong>Dynamic term-modal logics for first-order epistemic planning.</strong> 
