--- a/teaching.html
+++ b/teaching.html
@@ -41,28 +41,28 @@
 								<h3>Lecturer</h3>
 								<ol>
 									<li> <strong>Computational Tools for Data Science.</a></strong> 
-										<br/> Danish Technical University. Fall 2020. 
+										<br/> Technical University of Denmark (DTU). Fall 2020. 
 									</li>
 									<li> <strong>Artificial Intelligence and Multi-Agent Systems.</a></strong> 
-										<br/> Danish Technical University. Spring 2020. 
+										<br/> Technical University of Denmark (DTU). Spring 2020. 
 									</li>
 									<li> <strong>Introduction to Artificial Intelligence.</a></strong>
-										<br/> Danish Technical University. Spring 2020. 50% of the course.  
+										<br/> Technical University of Denmark (DTU). Spring 2020. 50% of the course.  
 									</li>
 									<li> <strong>Discrete Mathematics.</a></strong>
-										<br/> Danish Technical University. Fall 2019, Fall 2020. 50% of the course. 
+										<br/> Technical University of Denmark (DTU). Fall 2019, Fall 2020. 50% of the course. 
 									</li>
 								</ol>
 								<h3>Teaching Assistant</h3>
 								<ol>
 									<li> <strong>Logical Theories for Uncertainty and Learning.</a></strong> 
-										<br/> Danish Technical University. Fall 2019. 
+										<br/> Technical University of Denmark (DTU). Fall 2019. 
 									</li>
 								</ol>
 								<h3>Master thesis supervision</h3>
 								<ol>
 									<li> <strong> Learning and Planning in Multi-Agent Domains. </a></strong> 
-										<br/> Danish Technical University. Fall 2019. 
+										<br/> Technical University of Denmark (DTU). Fall 2019. 
 									</li>
 								</ol>
 
