--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Andrés Occhipinti Liberman</title>
+		<title>index</title>
 		<meta name="google-site-verification" content="9eeSVX8wJksFzanJFQaYgD-Mdoxk9V9gWnG_iVg8HsQ" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta itemprop="name" content="Andrés Occhipinti Liberman">
-		<meta itemprop="description" content="">
-		<meta property="og:title" content="Andrés Occhipinti Liberman" />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://aocclib.github.io/" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
