--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>index</title>
+		<title>Andrés Occhipinti Liberman website</title>
 		<meta name="google-site-verification" content="9eeSVX8wJksFzanJFQaYgD-Mdoxk9V9gWnG_iVg8HsQ" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta itemprop="name" content="Andrés Occhipinti Liberman">
 		<meta charset="UTF-8">
-  		<meta name="description" content="">
+  		<meta name="description" content="Personal website of Andrés Occhipinti Liberman">
  	        <meta name="keywords" content="Andrés, Occhipinti, Liberman, Andres">
  		<meta property="og:title" content="Andrés Occhipinti Liberman" />
  		<meta property="og:type" content="website" />
@@ -18,7 +18,7 @@
 		<div id="page-wrapper">
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html"></a></h1>
+					<h1>Andrés Occhipinti Liberman</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">home</a></li>
@@ -47,8 +47,7 @@
 
 
 							    <p>I obtained my PhD degree in computer science (artificial intelligence and logic) from the same department, in November 2020.</p>
-
-
+						
 							    <p>Earlier, I completed the <a href="https://msclogic.illc.uva.nl/">MSc in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a>, <a href="https://www.uva.nl/">University of Amsterdam</a>.</p>
 
 							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, multi-agent systems, planning, theory of mind, dynamic epistemic logic, learning symbolic representations.</p>
