--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html"></a></h1>
+					<h1>Contact</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">home</a></li>
