--- a/activities.html
+++ b/activities.html
@@ -14,7 +14,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1>Activities</a></h1>
+					<h1>Activities</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">home</a></li>
