--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1>Contact</a></h1>
+					<h1>Contact</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">home</a></li>
