--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Andrés Occhipinti Liberman | contact</title>
 		<meta charset="utf-8" />
