--- a/teaching.html
+++ b/teaching.html
@@ -1,7 +1,5 @@
-
-
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Andrés Occhipinti Liberman | teaching</title>
 		<meta charset="utf-8" />
