--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  		<meta property="og:url" content="https://aocclib.github.io/" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="canonical" href="https://aocclib.github.io/" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
