--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="row">
 							<div class="col-3 col-12-xsmall">
 								<p style="margin-bottom:3cm;"></p>
-							    <p> <img src="images/me.jpg" style="max-width: 100%; max-height:100vh;width: auto;margin:0 auto;display:block;"> 
+							    <p> <img alt="Picture of Andrés Occhipinti Liberman" src="images/me.jpg" style="max-width: 100%; max-height:100vh;width: auto;margin:0 auto;display:block;"> 
 							    </p>
 							</div>
 							<div class="col-9 col-12-xsmall"> 
