--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Andrés Occhipinti Liberman | homepage</title>
+		<title>Andrés Occhipinti Liberman/title>
 		<meta name="google-site-verification" content="9eeSVX8wJksFzanJFQaYgD-Mdoxk9V9gWnG_iVg8HsQ" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta itemprop="name" content="Andrés Occhipinti Liberman">
 		<meta charset="UTF-8">
-  		<meta name="description" content="Personal website of Andrés Occhipinti Liberman">
+  		<meta name="description" content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence.">
  	        <meta name="keywords" content="Andrés, Occhipinti, Liberman, Andres">
  		<meta property="og:title" content="Andrés Occhipinti Liberman" />
  		<meta property="og:type" content="website" />
  		<meta property="og:url" content="https://aocclib.github.io/" />
+		<meta property=og:description content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence."/>
+		<meta property="og:image" content="https://aocclib.github.io/me.jpg" />
+		<meta property=og:locale content=en_GB />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="canonical" href="https://aocclib.github.io/" />
