--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Andrés Occhipinti Liberman/title>
+		<title>Andrés Occhipinti Liberman</title>
 		<meta name="google-site-verification" content="9eeSVX8wJksFzanJFQaYgD-Mdoxk9V9gWnG_iVg8HsQ" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta itemprop="name" content="Andrés Occhipinti Liberman">
@@ -14,6 +14,7 @@
 		<meta property=og:description content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence."/>
 		<meta property="og:image" content="https://aocclib.github.io/me.jpg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="canonical" href="https://aocclib.github.io/" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
