--- a/activities.html
+++ b/activities.html
@@ -45,7 +45,7 @@
 								</p>
 								
 								<h2>Summer schools</h2>
-								<p> FoPSS Summer School in Logic and Learning. University of Oxford, UK.
+								<p> FoPSS Summer School in Logic and Learning. University of Oxford, UK. July 2018.
 								</p>
 
 					</div>
