--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  		<meta property="og:type" content="website" />
  		<meta property="og:url" content="https://aocclib.github.io/" />
 		<meta property=og:description content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence."/>
-		<meta property="og:image" content="https://aocclib.github.io/me.jpg" />
+		<meta property="og:image" content="https://aocclib.github.io/me2021rr.jpg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="canonical" href="https://aocclib.github.io/" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -40,7 +40,7 @@
 						<div class="row">
 							<div class="col-3 col-12-xsmall">
 								<p style="margin-bottom:3cm;"></p>
-							    <p> <img alt="Picture of Andrés Occhipinti Liberman" src="images/me.jpg" style="max-width: 100%; max-height:100vh;width: auto;margin:0 auto;display:block;"> 
+							    <p> <img alt="Picture of Andrés Occhipinti Liberman" src="images/me2021rr.jpg" style="max-width: 70%; max-height:100vh;width: auto;margin:0 auto;display:block;"> 
 							    </p>
 							</div>
 							<div class="col-9 col-12-xsmall"> 
