--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
 							</div>
 							<div class="col-9 col-12-xsmall"> 
 								<h1 style="text-align:left;">Andrés Occhipinti Liberman</h1>
-							    <p>I'm an External Lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a>, <a href="https://www.dtu.dk/">Technical University of Denmark (DTU)</a>. </p>
+							    <p>I'm a postdoctoral researcher within the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a> at the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra, in Spain.</p>
+
+							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a>, <a href="https://www.dtu.dk/">Technical University of Denmark (DTU)</a>. I received my Ph.D. degree in artificial intelligence and logic from the same department in November 2020. Before that, I completed the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> at the University of Amsterdam.</p>
 
 
-							    <p>I obtained my PhD degree in computer science (artificial intelligence and logic) from the same department, in November 2020.</p>
-						
-							    <p>Earlier, I completed the <a href="https://msclogic.illc.uva.nl/">MSc in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a>, <a href="https://www.uva.nl/">University of Amsterdam</a>.</p>
-
-							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, multi-agent systems, planning, theory of mind, dynamic epistemic logic, learning symbolic representations.</p>
+							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, social intelligence, multi-agent systems, dynamic epistemic logic, planning, learning symbolic representations.</p>
 							</div>
 						<!--<a href="#one" class="goto-next scrolly">Next</a> -->
 						</div>
