--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							</div>
 							<div class="col-9 col-12-xsmall"> 
 								<h1 style="text-align:left;">Andrés Occhipinti Liberman</h1>
-							    <p>I'm a postdoctoral researcher within the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a> at the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra, in Spain.</p>
+							    <p>I'm a postdoctoral researcher within the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a> in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra, in Spain.</p>
 
 							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a>, <a href="https://www.dtu.dk/">Technical University of Denmark (DTU)</a>.</p>
 								    
