--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 							</div>
 							<div class="col-9 col-12-xsmall"> 
 								<h1 style="text-align:left;">Andrés Occhipinti Liberman</h1>
-							    <p>I'm a postdoctoral researcher within the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a> in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra, in Spain.</p>
+							    <p>I'm a postdoctoral researcher within the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a> in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra.</p>
 
-							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a>, <a href="https://www.dtu.dk/">Technical University of Denmark (DTU)</a>.</p>
+							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU).</p>
 								    
 								    
-							    <p>I received my Ph.D. degree in artificial intelligence and logic from the same department in November 2020. Before that, I completed the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> at the University of Amsterdam.</p>
+							    <p>I received my Ph.D. degree in artificial intelligence and logic from the same department in November 2020. Before that, I completed the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> of the University of Amsterdam.</p>
 
 
 							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, social intelligence, multi-agent systems, dynamic epistemic logic, planning, learning symbolic representations.</p>
