--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 							</div>
 							<div class="col-9 col-12-xsmall"> 
 								<h1 style="text-align:left;">Andrés Occhipinti Liberman</h1>
-							    <p>I'm a postdoctoral researcher within the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a> in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra.</p>
+							    <p>I'm a post-doctoral fellow in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra in Barcelona, Spain. I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a></p>
 
-							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU). I received my Ph.D. degree in artificial intelligence and logic from the same department in November 2020. </p>
+							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU). I received my Ph.D. in artificial intelligence and logic from the same department in November 2020. </p>
 								    
 								    
 							    <p>Before that, I completed the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> of the University of Amsterdam.</p>
