--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  		<meta property="og:type" content="website" />
  		<meta property="og:url" content="https://aocclib.github.io/" />
 		<meta property=og:description content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence."/>
-		<meta property="og:image" content="https://aocclib.github.io/picme.jpg" />
+		<!<meta property="og:image" content="https://aocclib.github.io/picme.jpg" /> -->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="canonical" href="https://aocclib.github.io/" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -38,12 +38,14 @@
 					<div class="content", style="position:relative; top:-122px">
 						
 						<div class="row">
+							<!
 							<div class="col-3 col-12-xsmall">
 								<p style="margin-bottom:3cm;"></p>
 							    <p> <img alt="Picture of Andrés Occhipinti Liberman" src="images/picme.jpg" style="max-width: 100%; max-height:60vh;width: auto;margin:0 auto;display:block;"> 
 							    </p>
 							</div>
-							<div class="col-9 col-12-xsmall"> 
+							-->
+							<!<div class="col-9 col-12-xsmall"> -->
 								<h1 style="text-align:left;">Andrés Occhipinti Liberman</h1>
 							    <p>I'm a post-doctoral fellow in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra in Barcelona, Spain. I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>. </p>
 
@@ -54,7 +56,7 @@
 
 
 							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, social intelligence, multi-agent systems, dynamic epistemic logic, planning, learning symbolic representations.</p>
-							</div>
+							<! </div> -->
 						<!--<a href="#one" class="goto-next scrolly">Next</a> -->
 						</div>
 					</div>
