--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content", style="position:relative; top:-122px">
-						<!
+							<!--
 							<div class="row">
 							
 							<div class="col-3 col-12-xsmall">
@@ -45,7 +45,7 @@
 							    </p>
 							</div>
 							-->
-							<!<div class="col-9 col-12-xsmall"> -->
+							<!-- <!<div class="col-9 col-12-xsmall"> -->
 								<h1 style="text-align:left;">Andrés Occhipinti Liberman</h1>
 							    <p>I'm a post-doctoral fellow in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra in Barcelona, Spain. I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>. </p>
 
@@ -56,7 +56,7 @@
 
 
 							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, social intelligence, multi-agent systems, dynamic epistemic logic, planning, learning symbolic representations.</p>
-							<! </div> -->
+							<!-- </div> -->
 						<!--<a href="#one" class="goto-next scrolly">Next</a> -->
 						</div>
 					</div>
