--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  		<meta property="og:type" content="website" />
  		<meta property="og:url" content="https://aocclib.github.io/" />
 		<meta property=og:description content="Personal website of Andrés Occhipinti Liberman. Researcher in Artificial Intelligence."/>
-		<!<meta property="og:image" content="https://aocclib.github.io/picme.jpg" /> -->
+		<!-- <meta property="og:image" content="https://aocclib.github.io/picme.jpg" /> -->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="canonical" href="https://aocclib.github.io/" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
