--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,12 @@
 							<section>
 								<h1>Publications</h1>
 								<ol>
+									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
+										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
+										<br/> To appear in: Nick Bezhanishvili, Rosalie Iemhoff and Fan Yang, eds.. <i>Outstanding Contributions to Logic, vol. 24</i>, Nick Bezhanishvili, Rosalie Iemhoff and
+Fan Yang. 2021.
+										<br/> <a href="https://www.ijcai.org/Proceedings/2020/0575.pdf">[pdf]</a>
+									</li>
 									<li> <strong>Decidability Results in First-Order Epistemic Planning.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
 										<br/> <i>Proceedings of the 29th International Joint Conference on Artificial Intelligence (IJCAI)</i>. 2020.
