--- a/publications.html
+++ b/publications.html
@@ -33,8 +33,7 @@
 								<ol>
 									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
 										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
-										<br/> To appear in: Nick Bezhanishvili, Rosalie Iemhoff and Fan Yang, eds.. <i>Outstanding Contributions to Logic, vol. 24</i>, dedicated to Dick de Jongh. 2021.
-Fan Yang. 2021.
+										<br/> To appear in: Nick Bezhanishvili, Rosalie Iemhoff and Fan Yang, eds.. <i>Outstanding Contributions to Logic, vol. 24</i>, dedicated to Dick de Jongh. Springer. 2021.
 									</li>
 									<li> <strong>Decidability Results in First-Order Epistemic Planning.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
