--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 							-->
 							<!-- <!<div class="col-9 col-12-xsmall"> -->
 								<h1 style="text-align:left;">Andrés Occhipinti Liberman</h1>
-							    <p>I'm a post-doctoral fellow in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra in Barcelona, Spain. I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>. </p>
+							    <p>I'm a post-doctoral fellow in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra in Barcelona, Spain. </p>
+						
+							    <p> I'm a member of the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>.</p>
 
 							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU). I received my Ph.D. in artificial intelligence and logic from the same department in November 2020. </p>
 								    
@@ -55,7 +57,7 @@
 							    <p>Before that, I completed the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> of the University of Amsterdam.</p>
 
 
-							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, social intelligence, multi-agent systems, dynamic epistemic logic, planning, learning symbolic representations.</p>
+							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, learning symbolic representations, automated planning, social intelligence, multi-agent systems, dynamic epistemic logic.</p>
 							<!-- </div> -->
 						<!--<a href="#one" class="goto-next scrolly">Next</a> -->
 						</div>
