--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							    <p>Previously, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU). I received my Ph.D. in artificial intelligence and logic from the same department in November 2020. </p>
 								    
 								    
-							    <p>Before that, I completed the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> of the University of Amsterdam.</p>
+							    <p>Before that, I did the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> of the University of Amsterdam.</p>
 
 
 							    <p style="font-size:12.5px"><b>Keywords</b>: artificial intelligence, social intelligence, multi-agent systems, dynamic epistemic logic, planning, learning symbolic representations.</p>
