--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,7 @@
 									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
 										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
 										<br/> To appear in: Nick Bezhanishvili, Rosalie Iemhoff and Fan Yang, eds.. <i>Outstanding Contributions to Logic, vol. 24</i>, dedicated to Dick de Jongh. Springer. 2021.
+										<br/> <a href="https://arxiv.org/pdf/2109.06076.pdf">[pre-print]</a>
 									</li>
 									<li> <strong>Decidability Results in First-Order Epistemic Planning.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
