--- a/teaching.html
+++ b/teaching.html
@@ -32,6 +32,9 @@
 								<h1>Teaching</h1>
 								<h2>Lecturer</h2>
 								<ol>
+									<li> <strong>Introduction to Artificial Intelligence.</a></strong> 
+										<br/> Pompeu Fabra University (UPF). Fall 2021. 
+									</li>
 									<li> <strong>Computational Tools for Data Science.</a></strong> 
 										<br/> Technical University of Denmark (DTU). Fall 2020. 
 									</li>
