--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 						            <p>I am interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are topics I worked on previously.</p>  
 						
-						            <p>Before coming to Barcelona, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU). I received my Ph.D. in artificial intelligence and logic from the same department in November 2020. </p>    
+						            <p>Before coming to Barcelona, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU). I received my Ph.D. in artificial intelligence and logic from the same department in 2020. </p>    
 								    
 							    <p>I did the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> of the University of Amsterdam.</p>
 
