--- a/teaching.html
+++ b/teaching.html
@@ -50,6 +50,9 @@
 								</ol>
 								<h2>Teaching Assistant</h2>
 								<ol>
+									<li> <strong>Autonomous Systems.</a></strong> 
+										<br/> Pompeu Fabra University (UPF). Spring 2022. 
+									</li>
 									<li> <strong>Logical Theories for Uncertainty and Learning.</a></strong> 
 										<br/> Technical University of Denmark (DTU). Fall 2019. 
 									</li>
