--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 						<!-- Text -->
 							<h1>Andrés Occhipinti Liberman</h1>
 							    <p>I'm a postdoc in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra in Barcelona, Spain. 
-							       I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>. I'm working on learning general models of environment dynamics, i.e., learning predictive models of the world that can be used for generalized planning and/or model-based reinforcement learning.</p>
+							       I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>. Currently, I'm working on learning general models of environment dynamics, i.e., on learning predictive models of the world that can be used for planning and/or model-based reinforcement learning.</p>
 
-						            <p>I am interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are topics I worked on previously.</p>  
+						            <p>I'm interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are topics I worked on previously.</p>  
 						
 						            <p>Before coming to Barcelona, I was an external lecturer at the <a href="https://www.compute.dtu.dk/">Department of Applied Mathematics and Computer Science</a> of the Technical University of Denmark (DTU). I got my Ph.D. in artificial intelligence and logic from the same department in 2020. Earlier, I completed the <a href="https://msclogic.illc.uva.nl/">M.Sc. in Logic</a> at the <a href="http://www.illc.uva.nl/">Institute for Logic, Language and Computation (ILLC)</a> of the University of Amsterdam.</p>
 
