--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,10 @@
 							<section>
 								<h1>Publications</h1>
 								<ol>
+									<li> <strong>Reasoning about Epistemic Social Network Dynamics using Dynamic Term-Modal Logic.</strong> 
+										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
+										<br/> <i>Journal of Logic and Computation</i>. To appear, 2022.
+									</li>
 									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
 										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
 										<br/> To appear in: Nick Bezhanishvili, Rosalie Iemhoff and Fan Yang, eds.. <i>Outstanding Contributions to Logic, vol. 24</i>. Springer. 2021.
