--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
 										<br /> <i>Logic, Rationality, and Interaction (LORI 2019)</i>. P. Blackburn, E. Lorini, M. Guo, eds.. Lecture Notes in Computer Science. vol. 11813. Springer. 2019. 
 										<br/> <a href="https://arxiv.org/pdf/1908.09658.pdf">[pdf]</a> <a href="https://link.springer.com/chapter/10.1007/978-3-662-60292-8_13">[publisher link]</a>
 									</li>
-									<li> <strong>Evidence logics with Relational Evidence.</strong> 
+									<li> <strong>Evidence Logics with Relational Evidence.</strong> 
 										<br/> Alexandru Baltag and Andrés Occhipinti Liberman. 
 										<br /> <i>Logic, Rationality, and Interaction (LORI 2017)</i>. A. Baltag, J. Seligman, T. Yamada, eds.. Lecture Notes in Computer Science. vol. 10455. Springer. 2017. 
 										<br/><a href="https://arxiv.org/pdf/1706.05905.pdf">[pdf]</a> <a href="https://link.springer.com/chapter/10.1007/978-3-662-55665-8_2">[publisher link]</a> 
