--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<!-- Text -->
 							<h1>Andrés Occhipinti Liberman</h1>
 							    <p>I'm a postdoc in the <a href="https://www.upf.edu/web/ai-ml">Artificial Intelligence and Machine Learning Group</a> of Universitat Pompeu Fabra in Barcelona, Spain. 
-							       I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>. Currently, I'm working on learning models of environment dynamics that can be used for automated planning and/or model-based reinforcement learning.</p>
+							       I'm involved in the <a href="https://rleap-project.github.io/">Representation Learning for Planning (RLeap) project</a>. I'm working on learning dynamics models for automated planning and/or model-based reinforcement learning.</p>
 
 						            <p>I'm interested as well in theory-of-mind reasoning, epistemic planning and epistemic logics, which are topics I worked on previously.</p>  
 						
