--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 									</li>
 									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
 										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
-										<br/> Chapter in <i>Outstanding Contributions to Logic, vol. 24</i>. To appear, 2021.
+										<br/> Chapter in <i>Outstanding Contributions to Logic</i>, Springer. To appear, 2021.
 										<br/> <a href="https://arxiv.org/pdf/2109.06076.pdf">[pre-print]</a>
 									</li>
 									<li> <strong>Decidability Results in First-Order Epistemic Planning.</strong> 
