--- a/publications.html
+++ b/publications.html
@@ -31,9 +31,14 @@
 							<section>
 								<h1>Publications</h1>
 								<ol>
+									<li> <strong>Learning First-Order Symbolic Planning Representations That Are Grounded.</strong> 
+										<br/> Andrés Occhipinti Liberman, Blai Bonet, Hector Geffner. 
+										<br/> <i>3rd ICAPS workshop on Bridging the Gap Between AI Planning and Reinforcement Learning</i>. Accepted, to appear, 2022.
+										<br/> <a href="https://arxiv.org/pdf/2204.11902.pdf">[pdf]</a>
+									</li>
 									<li> <strong>Reasoning about Epistemic Social Network Dynamics using Dynamic Term-Modal Logic.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
-										<br/> <i>Journal of Logic and Computation</i>. To appear, 2022.
+										<br/> <i>Journal of Logic and Computation</i>. Accepted, to appear, 2022.
 									</li>
 									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
 										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
