--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,8 @@
 									</li>
 									<li> <strong>Reasoning about Epistemic Social Network Dynamics using Dynamic Term-Modal Logic.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
-										<br/> <i>Journal of Logic and Computation</i>. Accepted, to appear, 2022.
+										<br/> <i>Journal of Logic and Computation</i>. 2022.
+										<br/> <a href="https://academic.oup.com/logcom/article-abstract/32/6/1067/6575676">[publisher link]</a>
 									</li>
 									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
 										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
