--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 									<li> <strong>Learning First-Order Symbolic Planning Representations That Are Grounded.</strong> 
 										<br/> Andrés Occhipinti Liberman, Blai Bonet, Hector Geffner. 
 										<br/> <i>3rd ICAPS workshop on Bridging the Gap Between AI Planning and Reinforcement Learning</i>. Accepted, to appear, 2022.
-										<br/> <a href="https://arxiv.org/pdf/2204.11902.pdf">[pre-print]</a>
+										<br/> <a href="https://prl-theworkshop.github.io/prl2022-icaps/papers/PRL2022_paper_5.pdf">[pdf]</a>
 									</li>
 									<li> <strong>Reasoning about Epistemic Social Network Dynamics using Dynamic Term-Modal Logic.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
