--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 								<ol>
 									<li> <strong>Learning First-Order Symbolic Planning Representations That Are Grounded.</strong> 
 										<br/> Andrés Occhipinti Liberman, Blai Bonet, Hector Geffner. 
-										<br/> <i>3rd ICAPS workshop on Bridging the Gap Between AI Planning and Reinforcement Learning</i>. Accepted, 2022.
+										<br/> <i>3rd ICAPS workshop on Bridging the Gap Between AI Planning and Reinforcement Learning</i>. 2022.
 										<br/> <a href="https://prl-theworkshop.github.io/prl2022-icaps/papers/PRL2022_paper_5.pdf">[pdf]</a>
 									</li>
 									<li> <strong>Reasoning about Epistemic Social Network Dynamics using Dynamic Term-Modal Logic.</strong> 
