--- a/teaching.html
+++ b/teaching.html
@@ -32,6 +32,9 @@
 								<h1>Teaching</h1>
 								<h2>Lecturer</h2>
 								<ol>
+									<li> <strong>Foundations of Artificial Intelligence.</a></strong> 
+										<br/> ICAI-Comillas University. Fall 2023. 
+									</li>
 									<li> <strong>Introduction to Artificial Intelligence.</a></strong> 
 										<br/> Pompeu Fabra University (UPF). Fall 2021. 
 									</li>
