--- a/activities.html
+++ b/activities.html
@@ -31,10 +31,9 @@
 								<h1>Activities</h1>
 						
 								<h2>Research visits</h2>
-								<p>
-								 Participant, 3rd TAILOR meeting and conference, on "Foundations of Trustworthy AI - Integrating Reasoning, Learning and Optimization". June 4-7 2023.
+								<p> Participant, 3rd TAILOR meeting and conference, on "Foundations of Trustworthy AI - Integrating Reasoning, Learning and Optimization". June 2023.</p>
 
-								 Visiting scholar, <a href="https://elliit.se/news-and-events/focus-period-linkoping-2022/visiting-scholars/"> ELLIIT Focus Period Linköping 2022</a>. October 2022.
+								<p>Visiting scholar, <a href="https://elliit.se/news-and-events/focus-period-linkoping-2022/visiting-scholars/"> ELLIIT Focus Period Linköping 2022</a>. October 2022.</p>
 								
 								<br>Doctoral visit, Department of Computer Science, KU Leuven (Belgium). February 2019 - June 2019.	
 								</p>
