--- a/activities.html
+++ b/activities.html
@@ -35,8 +35,7 @@
 
 								<p>Visiting scholar, <a href="https://elliit.se/news-and-events/focus-period-linkoping-2022/visiting-scholars/"> ELLIIT Focus Period Linköping 2022</a>. October 2022.</p>
 								
-								<br>Doctoral visit, Department of Computer Science, KU Leuven (Belgium). February 2019 - June 2019.	
-								</p>
+								<p>Doctoral visit, Department of Computer Science, KU Leuven (Belgium). February 2019 - June 2019.</p>
 								
 								<h2>Roles</h2>
 								<p> Program Chair: IJCAI 2021</a>.
