--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,11 @@
 							<section>
 								<h1>Publications</h1>
 								<ol>
+									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
+										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
+										<br/> in <i>Dick de Jongh on Intuitionistic and Provability Logic</i>, Vol. 28 of Outstanding Contributions to Logic, Springer. To appear in April.
+										<br/> <a href="https://link.springer.com/book/9783031479205">[publisher link]</a> <a href="https://arxiv.org/pdf/2109.06076.pdf">[pre-print]</a>
+									</li>
 									<li> <strong>Learning First-Order Symbolic Planning Representations That Are Grounded.</strong> 
 										<br/> Andrés Occhipinti Liberman, Blai Bonet, Hector Geffner. 
 										<br/> <i>3rd ICAPS workshop on Bridging the Gap Between AI Planning and Reinforcement Learning</i>. 2022.
@@ -40,11 +45,6 @@
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
 										<br/> <i>Journal of Logic and Computation</i>. 2022.
 										<br/> <a href="https://academic.oup.com/logcom/article-abstract/32/6/1067/6575676">[publisher link]</a>
-									</li>
-									<li> <strong>Learning to Act and Observe in Partially Observable Domains.</strong> 
-										<br/> Thomas Bolander, Nina Gierasimczuk and Andrés Occhipinti Liberman. 
-										<br/> Chapter in <i>Outstanding Contributions to Logic Series</i>, Springer. To appear, 2021.
-										<br/> <a href="https://arxiv.org/pdf/2109.06076.pdf">[pre-print]</a>
 									</li>
 									<li> <strong>Decidability Results in First-Order Epistemic Planning.</strong> 
 										<br/> Andrés Occhipinti Liberman and Rasmus K. Rendsvig. 
