--- a/teaching.html
+++ b/teaching.html
@@ -32,6 +32,15 @@
 								<h1>Teaching</h1>
 								<h2>Lecturer</h2>
 								<ol>
+									<li> <strong>Natural Language Processing I.</a></strong> 
+										<br/> ICAI-Comillas University. Spring 2024. 
+									</li>
+									<li> <strong>Introduction to Programming.</a></strong> 
+										<br/> Comillas University. Spring 2024. 
+									</li>
+									<li> <strong>Data Processing.</a></strong> 
+										<br/> Comillas University. Spring 2024. 
+									</li>
 									<li> <strong>Foundations of Artificial Intelligence.</a></strong> 
 										<br/> ICAI-Comillas University. Fall 2023. 
 									</li>
