--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 						<!-- Text -->
 							<section>
 								<h1>Contact</h1>
-									Email: <a href="javascript:location='mailto:\u0061\u006e\u0064\u0072\u0065\u0073\u002e\u006f\u0063\u0063\u0068\u0069\u0070\u0069\u006e\u0074\u0069\u0040\u0075\u0070\u0066\u002e\u0065\u0064\u0075';void 0"><script type="text/javascript">document.write('\u0061\u006e\u0064\u0072\u0065\u0073\u002e\u006f\u0063\u0063\u0068\u0069\u0070\u0069\u006e\u0074\u0069\u0040\u0075\u0070\u0066\u002e\u0065\u0064\u0075')</script></a> <hr>
+									Email: <a href="javascript:location='mailto:aocchipintiliberman@example.com';void 0">youremail@example.com</a> <hr>
 								
 					</div>
 				</div>
