--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 						<!-- Text -->
 							<section>
 								<h1>Contact</h1>
-									Email: <a href="javascript:location='mailto:aocchipintiliberman@example.com';void 0">youremail@example.com</a> <hr>
+									Email: <a href="javascript:location='mailto:aocchipintiliberman@example.com';void 0">aocchipintiliberman@example.com</a> <hr>
 								
 					</div>
 				</div>
