--- a/teaching.html
+++ b/teaching.html
@@ -32,6 +32,12 @@
 								<h1>Teaching</h1>
 								<h2>Lecturer</h2>
 								<ol>
+									<li> <strong>Algorithms.</a></strong> 
+										<br/> ICAI-Comillas University. Spring 2025. 
+									</li>
+									<li> <strong>Natural Language Processing II.</a></strong> 
+										<br/> ICAI-Comillas University. Autummn 2024. 
+									</li>
 									<li> <strong>Natural Language Processing I.</a></strong> 
 										<br/> ICAI-Comillas University. Spring 2024. 
 									</li>
@@ -42,13 +48,13 @@
 										<br/> Comillas University. Spring 2024. 
 									</li>
 									<li> <strong>Foundations of Artificial Intelligence.</a></strong> 
-										<br/> ICAI-Comillas University. Fall 2023. 
+										<br/> ICAI-Comillas University. Autumn 2023, Autumn 2024. 
 									</li>
 									<li> <strong>Introduction to Artificial Intelligence.</a></strong> 
-										<br/> Pompeu Fabra University (UPF). Fall 2021. 
+										<br/> Pompeu Fabra University (UPF). Autumn 2021. 
 									</li>
 									<li> <strong>Computational Tools for Data Science.</a></strong> 
-										<br/> Technical University of Denmark (DTU). Fall 2020. 
+										<br/> Technical University of Denmark (DTU). Autumn 2020. 
 									</li>
 									<li> <strong>Artificial Intelligence and Multi-Agent Systems.</a></strong> 
 										<br/> Technical University of Denmark (DTU). Spring 2020. 
@@ -57,7 +63,7 @@
 										<br/> Technical University of Denmark (DTU). Spring 2020. 50% of the course.  
 									</li>
 									<li> <strong>Discrete Mathematics.</a></strong>
-										<br/> Technical University of Denmark (DTU). Fall 2019, Fall 2020. 50% of the course. 
+										<br/> Technical University of Denmark (DTU). Autumn 2019, Autumn 2020. 50% of the course. 
 									</li>
 								</ol>
 								<h2>Teaching Assistant</h2>
@@ -66,13 +72,13 @@
 										<br/> Pompeu Fabra University (UPF). Spring 2022. 
 									</li>
 									<li> <strong>Logical Theories for Uncertainty and Learning.</a></strong> 
-										<br/> Technical University of Denmark (DTU). Fall 2019. 
+										<br/> Technical University of Denmark (DTU). Autumn 2019. 
 									</li>
 								</ol>
 								<h2>Master thesis supervision</h2>
 								<ol>
 									<li> <strong> Learning and Planning in Multi-Agent Domains. </a></strong> 
-										<br/> Technical University of Denmark (DTU). Fall 2019. 
+										<br/> Technical University of Denmark (DTU). Autumn 2019. 
 									</li>
 								</ol>
 
