--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
 								<h1>Teaching</h1>
 								<h2>Lecturer</h2>
 								<ol>
-									<li> <strong>Algorithms.</a></strong> 
+									<li> <strong>Algorithms and Data Structures.</a></strong> 
 										<br/> ICAI-Comillas University. Spring 2025. 
 									</li>
 									<li> <strong>Natural Language Processing II.</a></strong> 
